# docs/swagger.json
@@ -304,37 +304,71 @@
         }
       },
 
-    "/api/events/create": {
-      "post": {
-        "tags": ["Events"],
-        "summary": "Create a new event",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Event"
-              }
+      "/api/events/create": {
+        "post": {
+          "tags": ["Events"],
+          "summary": "Create a new event",
+          "consumes": ["multipart/form-data"],
+          "parameters": [
+            {
+              "name": "title",
+              "in": "formData",
+              "required": true,
+              "type": "string"
+            },
+            {
+              "name": "description",
+              "in": "formData",
+              "required": true,
+              "type": "string"
+            },
+            {
+              "name": "date",
+              "in": "formData",
+              "required": true,
+              "type": "string",
+              "format": "date"
+            },
+            {
+              "name": "image",
+              "in": "formData",
+              "required": true,
+              "type": "file"
+            },
+            {
+              "name": "location",
+              "in": "formData",
+              "required": true,
+              "type": "string"
             }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Event created successfully",
+          ],
+          "requestBody": {
+            "required": true,
             "content": {
-              "application/json": {
+              "multipart/form-data": {
                 "schema": {
                   "$ref": "#/components/schemas/Event"
                 }
               }
             }
-          }
-        },
-          "400": {
-            "description": "Bad Request"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "responses": {
+            "201": {
+              "description": "Event created successfully",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/Event"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
           }
         }
       },
@@ -888,6 +922,17 @@
             "type": "string",
             "description": "Date of the event",
             "format": "date",
+            "required": true
+          },
+          "location": {
+            "type": "string",
+            "description": "Location of the event",
+            "required": true
+          },
+          "image": {
+            "type": "string",
+            "description": "Image of the event",
+            "format": "binary",
             "required": true
           }
         }
