# models/eventModel.js
@@ -13,6 +13,16 @@ const EventSchema = new mongoose.Schema({
   date: {
     type: Date,
     required: true,
+  },
+  image: {
+    url: {
+      type:String,
+      required: true,
+    }
+  },
+  location: {
+    type: String,
+    required: true,
   }
 });
 
