# routes/event.routes.js
@@ -2,8 +2,9 @@ const express = require ('express');
 // import eventController from '../controllers/event.controller.js';
 const eventRoutes = express.Router();
 const {eventController} = require('../controllers/event.controller.js')
+const upload = require('../Middlewares/multer.js')
 
-eventRoutes.post('/create', eventController.createEvent);
+eventRoutes.post('/create', upload.single('image'),eventController.createEvent);
 eventRoutes.get('/list/:id', eventController.getEventById);
 eventRoutes.get('/listevents', eventController.getA);
 eventRoutes.put('/update/:id', eventController.updateEvent);
